# cpp-opencv-introduction

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/Detectors/: FaceDetector.cpp  FaceDetector.hpp
